--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"description": "**Read these instructions carefully. Understand exactly what is expected _before_ starting this Sprint Challenge.**",
 	"main": "server.js",
 	"dependencies": {
+		"cors": "^2.8.5",
 		"express": "^4.17.1",
 		"helmet": "^4.1.0",
 		"knex": "^0.21.5",
